<resources>
    <string name="app_name">Eval 360</string>
    <string name="home">Home</string>
    <string name="get_started">Get Started</string>

    <string name="profileStudent">Profile</string>
    <string name="viewProject">Projects</string>
    <string name="groups">Your group:</string>

    <string name="username">Username:</string>
    <string name="email">Email</string>
    <string name="email2">  Email</string>
    <string name="password">Password</string>
    <string name="password2">   Password</string>
    <string name="verify_password">Verify Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="Log_out">Log out</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="click_here">click here</string>
    <string name="profile">Profile</string>
    <string name="projects">Project List</string>
    <string name="create_projects">Create projects</string>
    <string name="account_yet">Don\'t have an account yet?</string>
    <string name="already_account">Already have an account?</string>
    <string name="title_activity_project_details">ProjectDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="student_count">Student Count: %d</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_parameters_of_groups">ParametersOfGroupsActivity</string>
    <string name="home_page_teacher">Home Page Teacher -</string>
    <string name="action">Actions</string>
    <string name="email_home_page">Email: %s</string>
    <string name="teacher">Teacher</string>
</resources>